--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>{{ Sobre nós }}.</h2>
+<h3>{{ Somos a empresa que gerencia e organiza a maior parte de todas as provas de vestibulares em são paulo,
+  trabalhamos e conectamos nossos usuários com as melhores instituições de ensino na área de TI}}</h3>
 
 <p>Esta aplicação gerencia vestibulares.</p>
 
