--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,10 +6,10 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    Empresa Software e Soluções Educacionais<br />
+    Rua do Alan prado, 1500<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11) 9 7381-0131
 </address>
 
 <address>
