--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -5,6 +5,6 @@
 <h2>{{ title }}.</h2>
 <h3>{{ message }}</h3>
 
-<p>Esta aplicação gerencia vestibulares.</p>
+<p>Empresa Voltada para Tecnologia da Informação onde melhor aplicamos cursos e vestibulares em SP.</p>
 
 {% endblock %}
