--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -6,15 +6,15 @@
 <h3>{{ message }}</h3>
 
 <address>
-    Empresa Software Soluções<br />
+    Empresa Geek Solutions<br />
     Rua do Código, 1010<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    (11)973810131
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:jhnoramos@gmail.com">jhnoramos@gmail.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:geekgamesgru@gmail.com">geekgamesgru@gmail.com</a>
 </address>
 
 {% endblock %}
